--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head> 
 	<title>My Page</title> 
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
+    <link rel="stylesheet" href="mobile/jquery.mobile-1.2.1.min.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="phonegap.js" type="text/javascript"></script>
-	<link rel="stylesheet" href="mobile/jquery.mobile-1.2.1.min.css">
-	
-    <script src="mobile/jquery-1.8.3.min.jsjquery-1.8.3.min.js" type="text/javascript"></script>
+    <script src="mobile/jquery-1.8.3.min.js" type="text/javascript"></script>
 	<script src="mobile/jquery.mobile-1.2.1.min.js" type="text/javascript"></script>
 </head> 
 <body> 
@@ -14,15 +14,17 @@
 <div data-role="page">
 
 	<div data-role="header">
-		<h1>My Title</h1>
+		<h1>Help</h1>
 	</div><!-- /header -->
 
 	<div data-role="content">	
-		<p>Hello world</p>		
+		
 	</div><!-- /content -->
-	<div>
+    
+	<div class="col-lg-12">
     <ul data-role="listview" data-inset="true" data-filter="true">
-	<li><a href="#">Acura</a></li>
+   
+	<li style="margin-top: 10px;"><a href="#">Acura</a></li>
 	<li><a href="#">Audi</a></li>
 	<li><a href="#">BMW</a></li>
 	<li><a href="#">Cadillac</a></li>
