--- a/index.html
+++ b/index.html
@@ -8,30 +8,19 @@
     <script src="phonegap.js" type="text/javascript"></script>
     <script src="mobile/jquery-1.8.3.min.js" type="text/javascript"></script>
 	<script src="mobile/jquery.mobile-1.2.1.min.js" type="text/javascript"></script>
-</head> 
-<body> 
-
-<div data-role="page">
-
-	<div data-role="header">
-		<h1>Help</h1>
-	</div><!-- /header -->
-
-	<div data-role="content">	
-		
-	</div><!-- /content -->
-    
-	<div class="col-lg-12">
-    <ul data-role="listview" data-inset="true" data-filter="true">
-   
-	<li style="margin-top: 10px;"><a href="#">Acura</a></li>
-	<li><a href="#">Audi</a></li>
-	<li><a href="#">BMW</a></li>
-	<li><a href="#">Cadillac</a></li>
-	<li><a href="#">Ferrari</a></li>
-</ul>
-    </div>
-</div><!-- /page -->
-
-</body>
+    <script type="text/javascript" charset="utf-8">
+<head>
+    <title>PhoneGap-Beispiel</title>
+  
+     function onLoad(){
+          document.addEventListener("deviceready", onDeviceReady, true);
+     }
+     function onDeviceReady(){
+          navigator.notification.alert("PhoneGap funktioniert!");
+     }
+  </script>
+  </head>
+  <body onload="onLoad();">
+       <h1>Herzlich Willkommen bei PhoneGap</h1>
+  </body>
 </html>
