--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
 	<title></title>
 	
 	<script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
+    <script type="text/javascript" src="js/jquery-2.0.0.min.js"></script>
 
+    <link rel="stylesheet" href="../css/themes/default/jquery.mobile-1.4.5.min.css">
+    <script src="../js/jquery.js"></script>
+    <script src="../js/jquery.mobile-1.4.5.min.js"></script>
     </head> 
 	<body>
-    
+    <label>TEST</label>
     </body>
  
 </html>
